--- a/src/main/resources/static/jantent/assets/css/app.css
+++ b/src/main/resources/static/jantent/assets/css/app.css
@@ -13,6 +13,7 @@ body {
     width:100%;
     height:100%;
     background:url(../img/f10.jpg) #000 no-repeat;
+    /*background-color: darkturquoise;*/
     background-size:100% 100%;
     color:#ffffff;
 }
@@ -394,4 +395,9 @@ h1 span{
 }
 .timeline-span {
     border-left:2px solid #10D07A;
+}
+
+
+.footer{
+    text-align: center;
 }
