--- a/src/main/resources/templates/admin/footer.html
+++ b/src/main/resources/templates/admin/footer.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div th:fragment="footer-content">
-    <footer class="footer text-right">
-        2018 © <a th:href="@{https://github.com/zhangyunkang/blog}" target="_blank">zyk</a><div class=""></div>
+    <footer class="footer" style="text-align: center">
+        2018 © <a class th:href="@{https://github.com/zhangyunkang/blog}" target="_blank">zyk</a><div class=""></div>
     </footer>
 </div>
 <body th:fragment="footer">
