--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -5,55 +5,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>登录博客后台</title>
+    <title>登录lucklyhome</title>
 
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
     <link rel="shortcut icon" th:href="@{/admin/images/favicon.png}"/>
-
     <script th:src="@{//cdn.bootcss.com/jquery/2.2.3/jquery.min.js}"></script>
     <script th:src="@{/jantent/assets/js/amazeui.min.js}"></script>
     <link rel="stylesheet" th:href="@{/jantent/assets/css/amazeui.min.css}"/>
     <link rel="stylesheet" th:href="@{/jantent/assets/css/app.css}"/>
+    <!--add by xj css begin-->
+    <link rel="stylesheet" th:href="@{/jantent/assets/css/canvas.css}"/>
+    <!--add by xj css end-->
+    <!--add by xj js begin-->
     <script th:src="@{/admin/js/base.js}"></script>
+    <script th:src="@{/admin/js/canvas.js}"></script>
+    <!--add by xj js end-->
 </head>
-<body>
-
-<div class="log">
-    <div class="am-g">
-        <div class="am-u-lg-3 am-u-md-6 am-u-sm-8 am-u-sm-centered log-content">
-            <h1 class="log-title am-animation-slide-top">登录</h1>
-            <br>
-            <form class="am-form" id="loginForm">
-
-                <div class="am-input-group am-radius am-animation-slide-left">
-                    <input type="text" class="am-radius" name="username"/>
-                    <span class="am-input-group-label log-icon am-radius"><i
-                            class="am-icon-user am-icon-sm am-icon-fw"></i></span>
-                </div>
+<body onkeydown="enterSubmit(event)">
+    <div class="log">
+        <div id="main_box" class="am-g">
+            <div class="am-u-lg-3 am-u-md-6 am-u-sm-8 am-u-sm-centered log-content">
+                <h1 class="log-title am-animation-slide-top">登录</h1>
                 <br>
-                <div class="am-input-group am-animation-slide-left log-animation-delay">
-                    <input  class="am-form-field am-radius log-input" placeholder="密码" name="password" type="password"/>
-                    <span class="am-input-group-label log-icon am-radius"><i
-                            class="am-icon-lock am-icon-sm am-icon-fw"></i></span>
-                </div>
-                <br>
-                <button type="button"
-                        class="am-btn am-btn-primary am-btn-block am-btn-lg am-radius am-animation-slide-bottom log-animation-delay"
-                 onclick="checkForm()">
-                    登&nbsp;录
-                </button>
-            </form>
+                <form class="am-form" id="loginForm">
+
+                    <div class="am-input-group am-radius am-animation-slide-left">
+                        <input type="text" class="am-radius" name="username"/>
+                        <span class="am-input-group-label log-icon am-radius"><i
+                                class="am-icon-user am-icon-sm am-icon-fw"></i></span>
+                    </div>
+                    <br>
+                    <div class="am-input-group am-animation-slide-left log-animation-delay">
+                        <input  class="am-form-field am-radius log-input" placeholder="密码" name="password" type="password"/>
+                        <span class="am-input-group-label log-icon am-radius"><i
+                                class="am-icon-lock am-icon-sm am-icon-fw"></i></span>
+                    </div>
+                    <br>
+                    <button type="button"
+                            class="am-btn am-btn-primary am-btn-block am-btn-lg am-radius am-animation-slide-bottom log-animation-delay"
+                     onclick="checkForm()">
+                        登&nbsp;录
+                    </button>
+                </form>
+            </div>
         </div>
+
+        <footer class="log-footer">
+            © 2018 lucklyhome
+        </footer>
     </div>
-
-    <footer class="log-footer">
-        © 2018 zyk
-    </footer>
-</div>
-
 <script type="text/javascript">
-    /*<![CDATA[*/
+
     var tale = new $.tale();
+
+    function enterSubmit(obj) {
+        //当enter 键按下后，需要执行的事件
+        if (obj.keyCode == 13) {
+            checkForm();
+            obj.returnValue = false;
+        }
+    }
+    //document.onkeydown = keyDown;
+
+
     function checkForm() {
         tale.post({
             url: '/admin/login',
