--- a/src/main/resources/templates/admin/pooruser_list.html
+++ b/src/main/resources/templates/admin/pooruser_list.html
@@ -9,11 +9,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
-                        <h4 class="page-title">贫困户管理</h4>
+                        <h4 class="page-title">用户管理</h4>
                     </div>
                     <div class="col-md-12">
                         <div class="pull-right">
-                            <a th:href="@{/admin/pooruser/new}" class="btn btn-success waves-effect waves-light m-b-5">添加新贫困户</a>
+                            <a th:href="@{/admin/pooruser/new}" class="btn btn-success waves-effect waves-light m-b-5">添加新用户</a>
                         </div>
                         <table class="table table-striped table-bordered">
                             <thead>
@@ -21,8 +21,8 @@
                                 <th>用户名</th>
                                 <th>手机号码</th>
                                 <th>邮箱</th>
-                                <th>扶贫原因</th>
-                                <th width="20%">脱贫时间</th>
+                                <th>加入原因</th>
+                                <th width="20%">加入时间</th>
                                 <th width="12%">发布状态</th>
                                 <th>操作</th>
                             </tr>
