--- a/src/main/resources/templates/themes/jantent/footer.html
+++ b/src/main/resources/templates/themes/jantent/footer.html
@@ -19,7 +19,7 @@
                         </a>
                         <br/>
                         <p >&copy; Powered by <a style="color: #0e90d2" href="https://github.com/zhangyunkang/blog" target="_blank"
-                                          rel="nofollow">zyk</a>
+                                          rel="nofollow">luckly</a>
                         </p>
                         <p> 喜欢就去github上点个star吧 </p>
                         <br/>
