--- a/src/main/resources/templates/admin/header.html
+++ b/src/main/resources/templates/admin/header.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="headerFragment(title,active)">
     <meta charset="utf-8"/>
-    <title><th:block th:text="${title!=null?title:'博客后台'}+'- zyk'"></th:block></title>
+    <title><th:block th:text="${title!=null?title:'博客后台'}+'- lucklyhome'"></th:block></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta content="Coderthemes" name="author"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -29,7 +29,7 @@
                 </a>
             </div>
             <div class="pull-left" style="padding-left: 10px;">
-                <span style="font-size: 28px; color: #2f353f; line-height: 50px;">zyk Blog</span>
+                <span style="font-size: 28px; color: #2f353f; line-height: 50px;">luckly Blog</span>
             </div>
         </div>
     </div>
