修改文章部分

--- a/src/main/resources/templates/admin/article_list.html
+++ b/src/main/resources/templates/admin/article_list.html
@@ -78,6 +78,7 @@
                     success: function (result) {
                         if(result && result.success){
                             tale.alertOkAndReload('文章删除成功');
+                            window.location.href="/admin/article";
                         } else {
                             tale.alertError(result.msg || '文章删除失败');
                         }
@@ -85,6 +86,7 @@
                 });
             }
         });
+
     }
     /*]]>*/
 </script>
