--- a/src/main/resources/templates/admin/pooruser_list.html
+++ b/src/main/resources/templates/admin/pooruser_list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" th:with="title='贫困户管理',active='pooruser'">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:with="title='用户管理',active='pooruser'">
 <header th:replace="admin/header::headerFragment(${title},${active})"></header>
 <body class="fixed-left">
 <div id="wrapper">
