--- a/src/main/resources/templates/admin/footer.html
+++ b/src/main/resources/templates/admin/footer.html
@@ -8,7 +8,7 @@
 <body th:fragment="footer">
 <script th:src="@{//cdn.bootcss.com/jquery/3.2.1/jquery.min.js}"></script>
 <script th:src="@{//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
-<script th:src="@{//cdn.bootcss.com/limonte-sweetalert2/6.4.1/sweetalert2.min.js}"></script>
+<script th:src="@{/admin/js/sweetalert.min.js}"></script>
 <script th:src="@{/admin/js/jquery.app.js}"></script>
 <script th:src="@{/admin/js/base.js}"></script>
 </body>
