--- a/src/main/resources/templates/admin/pooruser_edit.html
+++ b/src/main/resources/templates/admin/pooruser_edit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" th:with="title='保存贫困户',active='pooruser'">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:with="title='保存用户',active='pooruser'">
 <header th:replace="admin/header::headerFragment(${title},${active})"></header>
 <link th:href="@{/admin/plugins/tagsinput/jquery.tagsinput.css}" rel="stylesheet"/>
 <link th:href="@{/admin/plugins/select2.dist.css/select2-bootstrap.css}" rel="stylesheet"/>
@@ -85,10 +85,10 @@
                     <div class="col-sm-12">
                         <h4 class="page-title">
                             <th:block th:if="${null != poorUsers}">
-                                编辑贫困户信息
+                                编辑用户信息
                             </th:block>
                             <th:block th:unless="${null != poorUsers}">
-                                发布贫困户信息
+                                发布用户信息
                             </th:block>
                         </h4>
                     </div>
@@ -108,7 +108,7 @@
 
 
                             <div class="form-group col-md-6" style="padding: 0 10px 0 0;">
-                                <input type="text" class="form-control" placeholder="请贫困户姓名（必须）" name="username"
+                                <input type="text" class="form-control" placeholder="请用户姓名（必须）" name="username"
                                        required="required"
                                        aria-required="true"
                                        th:value="${poorUsers!=null and poorUsers.username!=null }?${poorUsers.username}: ''"/>
@@ -133,12 +133,11 @@
                                        th:value="${poorUsers!=null and poorUsers.age !=null}?${poorUsers.age}: ''"/>
                             </div>
                             <div class="form-group col-md-6" style="padding: 0 10px 0 0;">
-                                <input name="poorReason" id="poorReason" type="text" class="form-control" placeholder="扶贫原因"
+                                <input name="poorReason" id="poorReason" type="text" class="form-control" placeholder="原因"
                                        th:value="${poorUsers!=null and poorUsers.poorReason !=null}?${poorUsers.poorReason}: ''"/>
                             </div>
                             <div class="form-group col-md-6" style="padding: 0 10px 0 0;">
-                                <input id="outpoorDate" type="text" class="form-control" placeholder="脱贫时间"
-                                       th:value="${poorUsers!=null and poorUsers.outpoorDate !=null}?${commons.fmtdate(poorUsers.outpoorDate, 'yyyy-MM-dd HH:mm:ss')}: ''"/>
+                                <input id="outpoorDate" type="text" class="form-control" placeholder="时间"
                             </div>
 
                            <!-- <div class="form-group col-md-6">
