--- a/src/main/resources/templates/admin/category.html
+++ b/src/main/resources/templates/admin/category.html
@@ -137,6 +137,7 @@
                     success: function (result) {
                         if (result && result.success) {
                             tale.alertOkAndReload('删除成功');
+                            window.location.href="/admin/category";
                         } else {
                             tale.alertError(result.msg || '删除失败');
                         }
