--- a/src/main/resources/templates/admin/footer.html
+++ b/src/main/resources/templates/admin/footer.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div th:fragment="footer-content">
     <footer class="footer" style="text-align: center">
-        2018 © <a class th:href="@{https://github.com/zhangyunkang/blog}" target="_blank">luckly</a><div class=""></div>
+        2018 © <a class th:href="@{https://github.com/luckly1/blog}" target="_blank">luckly</a><div class=""></div>
     </footer>
 </div>
 <body th:fragment="footer">
