--- a/src/main/resources/templates/admin/header.html
+++ b/src/main/resources/templates/admin/header.html
@@ -31,7 +31,7 @@
                 </a>
             </div>
             <div class="pull-left" style="padding-left: 10px;">
-                <span style="font-size: 28px; color: #2f353f; line-height: 50px;">luckly Blog</span>
+                <span id="title" style="font-size: 28px; color: #2f353f; line-height: 50px;">luckly Blog</span>
             </div>
         </div>
     </div>
