--- a/src/main/resources/templates/admin/article_edit.html
+++ b/src/main/resources/templates/admin/article_edit.html
@@ -196,7 +196,7 @@
                             <div class="clearfix"></div>
 
                             <div class="text-right">
-                                <a class="btn btn-default waves-effect waves-light" th:href="@{/admin/article}">返回列表</a>
+                                <a class="btn btn-default waves-effect waves-light" th:href="@{/admin/article}">返回</a>
                                 <button type="button" class="btn btn-primary waves-effect waves-light"
                                         onclick="subArticle('publish');">
                                     保存文章
@@ -209,7 +209,7 @@
                         </form>
                     </div>
                 </div>
-                <div th:replace="admin/footer :: footer-content"></div>
+                <!--<div th:replace="admin/footer :: footer-content"></div>-->
             </div>
         </div>
     </div>
