--- a/src/main/resources/templates/admin/comment_list.html
+++ b/src/main/resources/templates/admin/comment_list.html
@@ -62,7 +62,7 @@
                         <div th:replace="comm/macros :: pageAdminNav(${comments})"></div>
                     </div>
                 </div>
-                <div th:replace="admin/footer :: footer-content"></div>
+                <!--<div th:replace="admin/footer :: footer-content"></div>-->
             </div>
         </div>
     </div>
