--- a/src/main/resources/templates/admin/footer.html
+++ b/src/main/resources/templates/admin/footer.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div th:fragment="footer-content">
-    <footer class="footer" style="text-align: center">
-        2018 © <a class th:href="@{https://github.com/luckly1/blog}" target="_blank">luckly</a><div class=""></div>
+    <footer class="footer">
+       <span style="margin-left:48%"> 2018 © <a class th:href="@{https://github.com/luckly1/blog}" target="_blank">luckly</a><div class=""></div></span>
     </footer>
 </div>
 <body th:fragment="footer">
