--- a/src/main/resources/templates/admin/page_list.html
+++ b/src/main/resources/templates/admin/page_list.html
@@ -51,7 +51,7 @@
                         </table>
                     </div>
                 </div>
-                <div th:replace="admin/footer :: footer-content"></div>
+                <!--<div th:replace="admin/footer :: footer-content"></div>-->
             </div>
         </div>
     </div>
