--- a/src/main/resources/templates/admin/pooruser_edit.html
+++ b/src/main/resources/templates/admin/pooruser_edit.html
@@ -174,7 +174,7 @@
                         </form>
                     </div>
                 </div>
-                <div th:replace="admin/footer :: footer-content"></div>
+                <!--<div th:replace="admin/footer :: footer-content"></div>-->
             </div>
         </div>
     </div>
