--- a/src/main/resources/templates/admin/pooruser_list.html
+++ b/src/main/resources/templates/admin/pooruser_list.html
@@ -60,7 +60,7 @@
                         <div th:replace="comm/macros :: pageAdminNav(${poorUsers})"></div>
                     </div>
                 </div>
-                <div th:replace="admin/footer :: footer-content"></div>
+                <!--<div th:replace="admin/footer :: footer-content"></div>-->
             </div>
         </div>
     </div>
