--- a/src/main/resources/templates/admin/article_list.html
+++ b/src/main/resources/templates/admin/article_list.html
@@ -10,7 +10,9 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <h4 class="page-title">文章管理</h4>
+                        <a th:href="@{/admin/article/publish}" class="new-button new-white">添加</a>
                     </div>
+
                     <div class="col-md-12">
                         <table class="table table-striped table-bordered">
                             <thead>
@@ -59,7 +61,7 @@
                         <div th:replace="comm/macros :: pageAdminNav(${articles})"></div>
                     </div>
                 </div>
-                <div th:replace="admin/footer :: footer-content"></div>
+                <!--<div th:replace="admin/footer :: footer-content"></div>-->
             </div>
         </div>
     </div>
