--- a/src/main/resources/templates/admin/attach.html
+++ b/src/main/resources/templates/admin/attach.html
@@ -105,7 +105,7 @@
                         </th:block>
                     </div>
                 </div>
-                <div th:replace="admin/footer :: footer-content"></div>
+                <!--<div th:replace="admin/footer :: footer-content"></div>-->
             </div>
         </div>
     </div>
