--- a/src/main/resources/templates/admin/page_edit.html
+++ b/src/main/resources/templates/admin/page_edit.html
@@ -49,7 +49,7 @@
                     </div>
 
                 </div>
-                <div th:replace="admin/footer :: footer-content"></div>
+                <!--<div th:replace="admin/footer :: footer-content"></div>-->
             </div>
         </div>
     </div>
