--- a/src/main/resources/templates/admin/setting.html
+++ b/src/main/resources/templates/admin/setting.html
@@ -95,7 +95,7 @@
                     </div>
 
                 </div>
-                <div th:replace="admin/footer :: footer-content"></div>
+                <!--<div th:replace="admin/footer :: footer-content"></div>-->
             </div>
         </div>
     </div>
