--- a/src/main/resources/templates/admin/bloguser_list.html
+++ b/src/main/resources/templates/admin/bloguser_list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" th:with="title='用户管理',active='pooruser'">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:with="title='用户管理',active='bloguser'">
 <header th:replace="admin/header::headerFragment(${title},${active})"></header>
 <body class="fixed-left">
 <div id="wrapper">
@@ -13,43 +13,44 @@
                     </div>
                     <div class="col-md-12">
                         <div class="pull-right">
-                            <a th:href="@{/admin/pooruser/new}" class="btn btn-success waves-effect waves-light m-b-5">添加新用户</a>
+                            <a th:href="@{/admin/bloguser/new}" class="btn btn-success waves-effect waves-light m-b-5">添加新用户</a>
                         </div>
                         <table class="table table-striped table-bordered">
                             <thead>
                             <tr>
-                                <th>用户名</th>
-                                <th>手机号码</th>
-                                <th>邮箱</th>
-                                <th>加入原因</th>
+                                <th width="12%">用户名</th>
+                                <th width="15%">手机号码</th>
+                                <th width="15%">邮箱</th>
                                 <th width="20%">加入时间</th>
-                                <th width="12%">发布状态</th>
+                                <th width="15%">用户状态</th>
                                 <th>操作</th>
                             </tr>
                             </thead>
                             <tbody>
-                            <th:block th:each="post : ${poorUsers.list}">
+                            <th:block th:each="post : ${blogUsers.list}">
                                 <tr th:uid="${post.uid}">
                                     <td th:text="${post.username}"></td>
                                     <td th:text="${post.mobilePhone}"></td>
                                     <td th:text="${post.email}"></td>
-                                    <td th:text="${post.poorReason}"></td>
-                                    <td th:text="${commons.fmtdate(post.outpoorDate, 'yyyy-MM-dd HH:mm:ss')}"></td>
+                                    <td th:text="${commons.fmtdate(post.created, 'yyyy-MM-dd HH:mm:ss')}"></td>
                                     <td>
-                                        <th:block th:if="${post.status == 'publish'}">
-                                            <span class="label label-success">已发布</span>
+                                        <th:block th:if="${post.status == 1}">
+                                            <span class="label label-info">待通过</span>
                                         </th:block>
-                                        <th:block th:if="${post.status == 'draft'}">
-                                            <span class="label label-default">草稿</span>
+                                        <th:block th:if="${post.status == 2}">
+                                            <span class="label label-success">正常</span>
+                                        </th:block>
+                                        <th:block th:if="${post.status == 3}">
+                                            <span class="label label-warning">已停用</span>
                                         </th:block>
                                     </td>
                                     <td>
-                                        <a th:href="@{'/admin/pooruser/'+${post.uid}}" class="btn btn-primary btn-sm waves-effect waves-light m-b-5"><i
+                                        <a th:href="@{'/admin/bloguser/'+${post.uid}}" class="btn btn-primary btn-sm waves-effect waves-light m-b-5"><i
                                                 class="fa fa-edit"></i> <span>编辑</span></a>
                                         <a href="javascript:void(0)" th:onclick="'delPost('+${post.uid}+');'"
                                            class="btn btn-danger btn-sm waves-effect waves-light m-b-5"><i
                                                 class="fa fa-trash-o"></i> <span>删除</span></a>
-                                        <a class="btn btn-warning btn-sm waves-effect waves-light m-b-5" th:href="@{'/pooruser/'+${post.uid}+'/preview'}"
+                                        <a class="btn btn-warning btn-sm waves-effect waves-light m-b-5" th:href="@{'/bloguser/'+${post.uid}+'/preview'}"
                                            target="_blank"><i
                                                 class="fa fa-rocket"></i> <span>预览</span></a>
                                     </td>
@@ -57,7 +58,7 @@
                             </th:block>
                             </tbody>
                         </table>
-                        <div th:replace="comm/macros :: pageAdminNav(${poorUsers})"></div>
+                        <div th:replace="comm/macros :: pageAdminNav(${blogUsers})"></div>
                     </div>
                 </div>
                 <!--<div th:replace="admin/footer :: footer-content"></div>-->
@@ -78,7 +79,7 @@
                     data: {cid: cid},
                     success: function (result) {
                         if(result && result.success){
-                            tale.alertOkAndReload('页面删除成功','/admin/pooruser');
+                            tale.alertOkAndReload('页面删除成功','/admin/bloguser');
                         } else {
                             tale.alertError(result.msg || '页面删除失败');
                         }
